fix: horizontal scrolling disabled, skills flex layout

--- a/portfolio/src/assets/styles/base.css
+++ b/portfolio/src/assets/styles/base.css
@@ -62,6 +62,7 @@ body {
 html,
 body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
